objects/mutliupsert__c.object
<CustomObject>
    <fields>
        <fullName>first__c</fullName>
        <externalId>true</externalId>
        <label>first</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>second__c</fullName>
        <externalId>true</externalId>
        <label>second</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>mutliupsert</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>mutliupsert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>multiupsert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>